--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install build tools
+      run: sudo apt-get install build-essential
     - name: configure
       run: bash ./configure
     - name: make
