--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install build tools
-      run: sudo apt-get update && sudo apt-get install -y build-essential libpthread-stubs0-dev libc-dev libc6-dev
+      run: sudo apt-get update && sudo apt-get install -y build-essential libpthread-stubs0-dev libc-dev libc6-dev uuid-dev uuid libossp-uuid-dev 
     - name: Check pthread.h
       run: ls -l /usr/include/pthread.h
     - name: configure
